--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,19 @@
 name = "rsc"
 version = "0.1.1"
 authors = ["Luke Wilson"]
+description = "RSC is a handwritten scientific calculator for use in Rust projects that require turning an equation inside a string into a result."
+repository = "https://github.com/asmoaesl/rsc"
+readme = "README.md"
+keywords = ["scientific", "calculator", "parser", "expression"]
+categories = ["command-line-utilities", "parsing", "science"]
+license = "MIT"
+
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+name = "rsc"
+path = "src/main.rs"
 
 [dependencies]
 peek-nth = "0.2.0"
