--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "rsc"
 version = "1.2.0"
 edition = "2018"
 authors = ["Luke Wilson"]
-description = "RSC is a handwritten scientific calculator for use in Rust projects that require turning an equation inside a string into a result."
+description = "A pure-Rust handwritten scientific calculator for solving math equations in strings."
 repository = "https://github.com/asmoaesl/rsc"
 readme = "README.md"
 keywords = ["scientific", "calculator", "parser", "expression"]
