--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,10 @@ path = "src/lib.rs"
 
 [dependencies]
 structopt = { version = "0.2", optional = true }
+colored = { version = "1.7", optional = true }
 
 [features]
-build-binary = ["structopt"]
+build-binary = ["structopt", "colored"]
 
 [[bin]]
 name = "rsc"
