--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,8 @@ required-features = ["executable"]
 executable = ["structopt", "colored"]
 
 [dependencies]
-peekmore = "1.3.0"
-#num = "0.4.0"
+peekmore = "^1.3.0"
+#num = "^0.4.0"
 # dependencies for the runnable version (feature "executable")
-structopt = { version = "0.3", optional = true }
-colored = { version = "2.0", optional = true }
+structopt = { version = "^0.3.26", optional = true }
+colored = { version = "^2.1", optional = true }
